--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -120,18 +120,18 @@
         .five.wide.column
           .subscribe-block
             %h3 Subscribe With Us
-            .ui.stackable.grid
+            .ui.stackable.grid.center.aligned
               .ten.wide.column
                 .ui.large.input.email-subscribe
                   %input{type: 'text', placeholder:"Enter your email"}
               .six.wide.column
                 %button.colins-submit
-                  %svg{:height => "70", :version => "1.1", :viewport => "0 0 196 70", :width => "196", :xmlns => "http://www.w3.org/2000/svg"}
-                    %rect.btn-shape.btn-bg{:fill => "#ffffff", "fill-opacity" => "1", :height => "64", :rx => "32", :ry => "32", :stroke => "#ccc", "stroke-width" => "4", :width => "190", :x => "3", :y => "3"}
-                    %rect.btn-shape.btn-color{:fill => "#ffffff", "fill-opacity" => "0", :height => "64", :rx => "32", :ry => "32", :stroke => "rgb(30,205,151)", "stroke-width" => "4", :width => "190", :x => "3", :y => "3"}
-                    %text.checkNode{:fill => "rgb(255,255,255)", "fill-opacity" => "1", "font-family" => "Montserrat", "font-size" => "22", "text-anchor" => "middle", :x => "96", :y => "40"}
+                  %svg{:height => "45", :version => "1.1", :viewport => "0 0 196 70", :width => "196", :xmlns => "http://www.w3.org/2000/svg"}
+                    %rect.btn-shape.btn-bg{:fill => "#ffffff", "fill-opacity" => "1", :height => "40", :rx => "0", :ry => "0", :stroke => "#ccc", "stroke-width" => "4", :width => "190", :x => "3", :y => "3"}
+                    %rect.btn-shape.btn-color{:fill => "#ffffff", "fill-opacity" => "0", :height => "40", :rx => "0", :ry => "0", :stroke => "rgb(30,205,151)", "stroke-width" => "4", :width => "190", :x => "3", :y => "3"}
+                    %text.checkNode{:fill => "rgb(255,255,255)", "fill-opacity" => "1", "font-family" => "Montserrat", "font-size" => "22", "text-anchor" => "middle", :x => "96", :y => "29"}
                       ✔
-                    %text.textNode{:fill => "rgb(30,205,151)", "fill-opacity" => "1", "font-family" => "Montserrat", "font-size" => "16", "text-anchor" => "middle", :transform => "scale(1)", :x => "96", :y => "40"}
+                    %text.textNode{:fill => "rgb(30,205,151)", "fill-opacity" => "1", "font-family" => "Montserrat", "font-size" => "16", "text-anchor" => "middle", :transform => "scale(1)", :x => "96", :y => "29"}
                       Submit
         .six.wide.column
   .footer-copyright
