--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -105,9 +105,9 @@
             Clubs by
           %ul.clubsearch__container__list
             %li.clubsearch__container__list__item postcode
+            %li.clubsearch__container__list__item suburb
             %li.clubsearch__container__list__item sport
             %li.clubsearch__container__list__item name
-            %li.clubsearch__container__list__item address
       .ui.icon.input.postcode-search
         %input.prompt{:autocomplete => "off", :placeholder => "Enter ...", :type => "text"}/
         %i.search.icon
