--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
             = link_to "Login/Sign Up", '/dashboard/lessons', class: 'item header'
           .item
     .wrapper.wrapper-inner-pages.small-padding
-      %header.header
+      %header.header-header
         -#.header-top
         -#  .ui.container
         -#    .header-inner
