--- a/app/assets/stylesheets/plugins/fluidbox/demo/src/css/styles.scss
+++ b/app/assets/stylesheets/plugins/fluidbox/demo/src/css/styles.scss
@@ -11,20 +11,20 @@
 /* Component styles */
 @font-face {
 	font-family: 'Blokk';
-	src: url('../fonts/BLOKKRegular.eot');
-	src: url('../fonts/BLOKKRegular.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/BLOKKRegular.woff') format('woff'),
-		 url('../fonts/BLOKKRegular.svg#BLOKKRegular') format('svg');
+	src: url('BLOKKRegular.eot');
+	src: url('BLOKKRegular.eot?#iefix') format('embedded-opentype'),
+		 url('BLOKKRegular.woff') format('woff'),
+		 url('BLOKKRegular.svg#BLOKKRegular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'fontello';
-	src: url('../fonts/fontello.eot');
-	src: url('../fonts/fontello.eot#iefix') format('embedded-opentype'),
-		 url('../fonts/fontello.woff') format('woff'),
-		 url('../fonts/fontello.ttf') format('truetype'),
-		 url('../fonts/fontello.svg#fontello') format('svg');
+	src: url('fontello.eot');
+	src: url('fontello.eot#iefix') format('embedded-opentype'),
+		 url('fontello.woff') format('woff'),
+		 url('fontello.ttf') format('truetype'),
+		 url('fontello.svg#fontello') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
