Add next button, improve styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 @import "plugins/weather-icons/css/weather-icons-wind";
 @import "plugins/weather-icons/css/weather-icons";
 @import "plugins/chartist/chartist";
+@import "plugins/lobibox/css/lobibox";
 @import "main";
