--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -256,3 +256,8 @@
   border-bottom: 1px solid #888;
   margin: 20px 20px;
 }
+
+.next-lesson-btn {
+  display: block!important;
+  margin: auto!important;
+}
