Various fixes for UI

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -595,3 +595,13 @@ button.colins-submit {
   66.64%,79.3% {transform:translate3d(0,-50%,0);}
   83.3%,95.96% {transform:translate3d(0,-25%,0);}
 }
+
+.float-right {
+  float: right;
+}
+
+.ui.segments .segment,
+.ui.segment {
+  font-size: 16px;
+}
+
