--- a/app/assets/stylesheets/club_map.scss
+++ b/app/assets/stylesheets/club_map.scss
@@ -92,6 +92,12 @@ $cubic: cubic-bezier(.64,.09,.08,1);
   position: relative;
   margin-top: 150px;
   padding: 0 20px;
+  width: 100%;
+
+  .icon {
+    right: 20px!important;
+    color: white!important;
+  }
 }
 
 .input-effect ~ .input-focus-border{ position: absolute;
@@ -103,31 +109,35 @@ $cubic: cubic-bezier(.64,.09,.08,1);
   transition: 0.4s;
 }
 :focus{outline: none;}
-.input-effect:focus ~ .input-focus-border{width: 100%; transition: 0.4s;}
+.input-effect:focus ~ .input-focus-border{right: 20px;width: calc(100% - 40px); transition: 0.4s;}
 .input-effect {
   border: 0;
   padding: 7px 0;
-  border-bottom: 1px solid #ccc;
+  border-top: none!important;
+  border-left: none!important;
+  border-right: none!important;
+  border-radius: 0!important;
+  border-bottom: 1px solid #ccc!important;
   font: 15px/24px "Lato", Arial, sans-serif;
   color: white;
   text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
   width: 100%;
   box-sizing: border-box;
   letter-spacing: 1px;
-  background: transparent;
+  background: transparent!important;
 
   &::-webkit-input-placeholder { /* Chrome */
-    color: white;
+    color: white!important;
   }
   &:-ms-input-placeholder { /* IE 10+ */
-    color: white;
+    color: white!important;
   }
   &::-moz-placeholder { /* Firefox 19+ */
-    color: white;
+    color: white!important;
     opacity: 1;
   }
   &:-moz-placeholder { /* Firefox 4 - 18 */
-    color: white;
+    color: white!important;
     opacity: 1;
   }
 }
