--- a/app/assets/stylesheets/club_map.scss
+++ b/app/assets/stylesheets/club_map.scss
@@ -119,7 +119,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
   border-radius: 0!important;
   border-bottom: 1px solid #ccc!important;
   font: 15px/24px "Lato", Arial, sans-serif;
-  color: white;
+  color: white!important;
   text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
   width: 100%;
   box-sizing: border-box;
