Add Privacy Policy

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -168,4 +168,6 @@
                       Submit
         .six.wide.column
   .footer-copyright
-    %p Copyright © 2017 | All rights are reserved.
+    %p
+      Copyright © 2017 | All rights are reserved.
+      %a{href: '/privacy_policy'} Privacy Policy
