Bring back header

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,28 +1,14 @@
--#.intro.intro-home
--#  .intro-bg
--#  .intro-body
--#    .ui.container
--#      %h1 A better way to teach kid about sport integrity
--#      %ol
--#        %li
--#          Teach your kids how to play their sport correctly
--#        %li
--#          Become their sport partners
--#        %li
--#          Being engaged in their activities
--#  .intro-actions
--#    .ui.container
--#      %section#search-form.section-search
--#        .shell
--#          .section-inner
--#            .search-content
--#              .search-label
--#                Find your course
--#              .search-box
--#                .ui.category.search.focus.sportaide_search.fluid
--#                  .ui.icon.input.fluid
--#                    %input.prompt{:autocomplete => "off", :placeholder => "You can type integrity, child protection...", :type => "text"}/
--#                    %i.search.icon
+.intro.intro-home
+  .intro-body
+    .ui.container
+      %h1 A better way to teach kid about sport integrity
+      %ol
+        %li
+          Teach your kids how to play their sport correctly
+        %li
+          Become their sport partners
+        %li
+          Being engaged in their activities
 
 .online-course-wrapper
   .online-courses.ui.container
