--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -113,41 +113,35 @@ body {
 }
 
 .intro-home {
-  height: 600px;
   background-size: cover;
+  background: #112435;
   position: relative;
 
   .intro-body {
     width: 100%;
-    position: absolute;
-    left: 0;
-    top: calc(48% - 7rem);
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    padding-bottom: 30px;
 
     h1 {
       margin: 0;
       width: 45%;
       font-weight: 600;
       font-size: 2.6em;
-      color: #392415;
+      color: #35acef;
       line-height: 1.22;
       letter-spacing: -0.02em;
     }
 
     ol {
-      text-shadow: 1px 1px #fff;
       padding: 0 26px;
-      margin: 0 0 30px;
+      margin: 0 0 0;
       overflow: auto;
       list-style-type: decimal;
       list-style-position: outside;
       margin-top: 15px;
-      font-size: 14px;
+      color: #35acef;
 
       li {
-        font-size: 1.28rem;
+        font-size: 18px;
         margin-bottom: 1.4em;
         font-weight: 100;
         line-height: 1.2;
@@ -179,7 +173,7 @@ body {
       .search-label {
         display: block;
         font-size: 34px;
-        color: #fff;
+        color: #35acef;
         margin-bottom: 10px;
         letter-spacing: -0.02em;
       }
@@ -189,12 +183,12 @@ body {
           border-radius: 0!important;
           background: transparent;
           border: none;
-          border-bottom: 1px solid white;
-          color: white;
+          border-bottom: 1px solid #35acef;
+          color: #35acef;
           font-size: 18px;
 
           &::-webkit-input-placeholder { /* Chrome */
-            color: white;
+            color: #35acef;
             transition: opacity ease-in-out;
           }
 
@@ -204,7 +198,7 @@ body {
         }
 
         .search.icon {
-          color: white;
+          color: #35acef;
         }
       }
     }
@@ -313,6 +307,7 @@ img {
   /* tablet, landscape iPad, lo-res laptops ands desktops */
   .intro-home {
     .intro-body{
+      padding-top: 40px;
       font-size: 12px;
     }
   }
@@ -622,7 +617,7 @@ button.colins-submit {
 .online-course-wrapper {
   width: 100%;
   display: block;
-  background: #3498db;
+  background: #ebf3f7;
   padding-bottom: 50px;
   padding-top: 50px;
 }
@@ -643,18 +638,27 @@ button.colins-submit {
   .course-item {
     opacity: 1;
     padding: 0!important;
+    overflow: visible !important;
     transform: scale(1) translate3d(0px, 0px, 0px);
+    -webit-transform: scale(1) translate3d(0px, 0px, 0px);
+    -moz-transform: scale(1) translate3d(0px, 0px, 0px);
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     perspective: 1000px;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
     position: absolute;
     transition: all 0.5s ease-out 0ms;
+    -webkit-transition: all 0.5s ease-out 0ms;
 
     .img-responsive {
       backface-visibility:hidden;
-      -webkit-transition:all .5s;
-      -moz-transition:all .5s;
+      -webkit-backface-visibility:hidden;
+      -moz-backface-visibility:hidden;
       transition:all .5s;
+      -moz-transition:all .5s;
+      -webkit-transition:all .5s;
       display: block;
       max-width: 100%;
       width: 100%;
@@ -666,7 +670,7 @@ button.colins-submit {
 
     &:hover {
       .img-responsive, .course-name {
-        -webkit-transform:rotateY(180deg);
+        -webkit-transform: -webkit-rotateY(180deg);
         -moz-transform:rotateY(180deg);
         transform:rotateY(180deg);
       }
@@ -691,6 +695,7 @@ button.colins-submit {
       text-align: center;
       text-transform: uppercase;
       backface-visibility:hidden;
+      -webkit-backface-visibility:hidden;
       -webkit-transition:all .5s;
       -moz-transition:all .5s;
       transition:all .5s;
