--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -126,7 +126,7 @@ body {
       width: 45%;
       font-weight: 600;
       font-size: 2.6em;
-      color: #35acef;
+      color: white;
       line-height: 1.22;
       letter-spacing: -0.02em;
     }
@@ -138,7 +138,7 @@ body {
       list-style-type: decimal;
       list-style-position: outside;
       margin-top: 15px;
-      color: #35acef;
+      color: white;
 
       li {
         font-size: 18px;
@@ -173,7 +173,7 @@ body {
       .search-label {
         display: block;
         font-size: 34px;
-        color: #35acef;
+        color: black;
         margin-bottom: 10px;
         letter-spacing: -0.02em;
       }
@@ -183,12 +183,12 @@ body {
           border-radius: 0!important;
           background: transparent;
           border: none;
-          border-bottom: 1px solid #35acef;
-          color: #35acef;
+          border-bottom: 1px solid black;
+          color: black;
           font-size: 18px;
 
           &::-webkit-input-placeholder { /* Chrome */
-            color: #35acef;
+            color: black;
             transition: opacity ease-in-out;
           }
 
@@ -198,7 +198,7 @@ body {
         }
 
         .search.icon {
-          color: #35acef;
+          color: black;
         }
       }
     }
