--- a/app/assets/stylesheets/club_map.scss
+++ b/app/assets/stylesheets/club_map.scss
@@ -142,6 +142,11 @@ $cubic: cubic-bezier(.64,.09,.08,1);
   }
 }
 
+.no-clubs-message {
+  color: white;
+  font-weight: bold!important;
+  margin-top: 30px!important;
+}
 .club-list {
   height: 100%;
   overflow: auto;
