--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,6 @@
 @import "plugins/weather-icons/css/weather-icons";
 @import "plugins/chartist/chartist";
 @import "plugins/lobibox/css/lobibox";
+@import "glide.core";
+@import "glide.theme";
 @import "main";
